cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

set(PROJECT_NAME RayTracingOW)

project(${PROJECT_NAME} VERSION 0.1.0)

# c++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_SHARED_LIBS OFF)
# set paths
set(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Source)
set(ASSETS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Assets)
set(THIRD_PARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty)
set(SHADER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Shaders)

add_definitions(
    -DPROJECT_NAME="${PROJECT_NAME}"
    -DSHADER_PATH="${SHADER_PATH}/"
    -DSHADER_PATH_W=L"${SHADER_PATH}/"
    -DASSETS_PATH="${ASSETS_PATH}/"
    -DASSETS_PATH_W=L"${ASSETS_PATH}/"
)
add_subdirectory("Source")
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT "Source")